# amalgama-army-challenge

./: .pre-commit-config.yaml  README.md  main.py  models.py  pyproject.toml  rules.py
helpers/: exceptions.py
models/: army.py  rules.py  units.py
